@@ -1,5 +1,8 @@
 2007-11-28  Marius Vollmer  <marius.vollmer@nokia.com>
 
+	* src/settings.cc (show_settings_dialog_flow): Use English instead
+	of logical ids.  They are gone.
+
 	* src/apt-worker-bin.cc (default_domain, DOMAIN_DEFAULT): Removed
 	former, hard coded default domain with latter.
 	(read_domain_conf): Don't set default_domain.
